[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Nodes/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Nodes/ChoiceMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/font_alphabet.tres" type="BitmapFont" id=3]
[ext_resource path="res://Assets/Fonts/vcr.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Nodes/ValueEdit.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Nodes/OptionsChoiceMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="ChoiceMenu" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 60 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 6 )

[node name="TopBar" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="TopBar"]
margin_right = 1280.0
margin_bottom = 116.0
color = Color( 0, 0, 0, 0.34902 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
margin_top = 14.0
margin_right = 1600.0
margin_bottom = 121.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastPage" type="Label" parent="TopBar/HBoxContainer"]
modulate = Color( 0.709804, 0.709804, 0.709804, 1 )
margin_top = 10.0
margin_right = 621.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "LAST"
align = 1
valign = 1

[node name="CurPage" type="Label" parent="TopBar/HBoxContainer"]
margin_left = 625.0
margin_top = 10.0
margin_right = 975.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 3 )
text = "CURRENT"
align = 1
valign = 1

[node name="NextPage" type="Label" parent="TopBar/HBoxContainer"]
modulate = Color( 0.709804, 0.709804, 0.709804, 1 )
margin_left = 979.0
margin_top = 10.0
margin_right = 1600.0
margin_bottom = 97.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "NEXT"
align = 1
valign = 1

[node name="EditValue" type="CanvasLayer" parent="."]
layer = 3

[node name="ValueEdit" parent="EditValue" instance=ExtResource( 5 )]
visible = false

[node name="DescriptionRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 637.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.34902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="DescriptionRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Awesome description."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
